--- a/style/core.css
+++ b/style/core.css
@@ -12,11 +12,6 @@ body {
 	overflow-x: hidden;
 }
 
-h1, h2, h3, h4, h5 {
-	font-style: italic;
-	text-shadow: 0px -1px 0px #283593;
-}
-
 section {
 	display: table;
 	width: 100%;
@@ -62,8 +57,7 @@ a {
 	width: 100%;
 	text-align: center;
 	font-family: "RobotoDraft", "Roboto", sans-serif;
-	color: #cca844;
-
+	color: #25cfc3;
 }
 
 #content h1 {
