--- a/style.css
+++ b/style.css
@@ -189,3 +189,10 @@ html, body{
 		font-size: 18px;
 	}
 }
+
+/* ---------- link ---------- */
+
+a:link {text-decoration: none;color: #1D7F78}
+a:active {text-decoration:blink}
+a:visited {text-decoration: none;color: #0E403C}
+a:hover {text-decoration:underline;color: #2FCFC3} 
