--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ html, body{
 
 /* ---------- link ---------- */
 
-a:link {text-decoration: none;color: #1D7F78}
+a:link {text-decoration: none;color: #0E403C}
 a:active {text-decoration:blink}
 a:visited {text-decoration: none;color: #0E403C}
 a:hover {text-decoration:underline;color: #2FCFC3} 
