--- a/style.css
+++ b/style.css
@@ -194,5 +194,5 @@ html, body{
 
 a:link {text-decoration: none;color: #2FCFC3}
 a:active {text-decoration:blink}
-a:visited {text-decoration: none;color: #0E403C}
+/* a:visited {text-decoration: none;color: #0E403C} */
 a:hover {text-decoration:underline;color: #2FCFC3} 
