--- a/style.css
+++ b/style.css
@@ -190,9 +190,9 @@ html, body{
 	}
 }
 
-/* ---------- link ---------- */
-
+/* ---------- link ---------- 
+/*
 a:link {text-decoration: none;color: #2FCFC3}
 a:active {text-decoration:blink}
-/* a:visited {text-decoration: none;color: #0E403C} */
-a:hover {text-decoration:underline;color: #2FCFC3} 
+a:visited {text-decoration: none;color: #0E403C} 
+a:hover {text-decoration:underline;color: #2FCFC3} */
