Change footer font size

--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ html, body{
 	color:#2FCFC3 ;
 	text-align: center;
 	padding:5px;
-	font-size:smaller;
+	font-size:xx-small;
 }
 
 /* ---------- content ---------- */
