--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html, body{
 	height: 100%;
 	background-color: #0B0C0D;
 	overflow: hidden;
-	font-family: 'roboto', helvetica, arial;
+	font-family: 'roboto', helvetica, arial, sans-serif;
 }
 
 *{
